#1046 - Fix several regressions after running EE 8 derived TCK
Signed-off-by: arjantijms <arjan.tijms@gmail.com>